--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <title>Primeros ejercicios</title>
 </head>
 <body>
-    <script src="js/ejercicio-4.js"></script>
+    <script src="js/ejercicio-6-7.js"></script>
 </body>
 </html>
